--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.1.2",
+    "pinia": "^2.1.7",
+    "reset-css": "^5.0.2",
+    "sass-loader": "^14.1.1",
+    "unplugin-auto-import": "^0.17.5",
     "vue": "^3.4.21"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "sass": "^1.72.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
