--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "reset-css": "^5.0.2",
     "sass-loader": "^14.1.1",
     "unplugin-auto-import": "^0.17.5",
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vue-cropperjs": "^5.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
